exports[`MultiRange supports having a selected item 1`] = `
<div
  className="ais-MultiRange__root">
  <div
    className="ais-MultiRange__items">
    <div
      className="ais-MultiRange__item">
      <label>
        <input
          checked={false}
          className="ais-MultiRange__itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="ais-MultiRange__itemBox ais-MultiRange__itemBox" />
        <span
          className="ais-MultiRange__itemLabel ais-MultiRange__itemLabel">
          label1
        </span>
      </label>
    </div>
    <div
      className="ais-MultiRange__item ais-MultiRange__itemSelected">
      <label>
        <input
          checked={true}
          className="ais-MultiRange__itemRadio ais-MultiRange__itemRadioSelected"
          onChange={[Function]}
          type="radio" />
        <span
          className="ais-MultiRange__itemBox ais-MultiRange__itemBox ais-MultiRange__itemBoxSelected" />
        <span
          className="ais-MultiRange__itemLabel ais-MultiRange__itemLabel ais-MultiRange__itemLabelSelected">
          label2
        </span>
      </label>
    </div>
    <div
      className="ais-MultiRange__item">
      <label>
        <input
          checked={false}
          className="ais-MultiRange__itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="ais-MultiRange__itemBox ais-MultiRange__itemBox" />
        <span
          className="ais-MultiRange__itemLabel ais-MultiRange__itemLabel">
          label3
        </span>
      </label>
    </div>
    <div
      className="ais-MultiRange__item">
      <label>
        <input
          checked={false}
          className="ais-MultiRange__itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="ais-MultiRange__itemBox ais-MultiRange__itemBox" />
        <span
          className="ais-MultiRange__itemLabel ais-MultiRange__itemLabel">
          label4
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`MultiRange supports passing items values 1`] = `
<div
  className="ais-MultiRange__root">
  <div
    className="ais-MultiRange__items">
    <div
      className="ais-MultiRange__item">
      <label>
        <input
          checked={false}
          className="ais-MultiRange__itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="ais-MultiRange__itemBox ais-MultiRange__itemBox" />
        <span
          className="ais-MultiRange__itemLabel ais-MultiRange__itemLabel">
          label1
        </span>
      </label>
    </div>
    <div
      className="ais-MultiRange__item">
      <label>
        <input
          checked={false}
          className="ais-MultiRange__itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="ais-MultiRange__itemBox ais-MultiRange__itemBox" />
        <span
          className="ais-MultiRange__itemLabel ais-MultiRange__itemLabel">
          label2
        </span>
      </label>
    </div>
    <div
      className="ais-MultiRange__item">
      <label>
        <input
          checked={false}
          className="ais-MultiRange__itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="ais-MultiRange__itemBox ais-MultiRange__itemBox" />
        <span
          className="ais-MultiRange__itemLabel ais-MultiRange__itemLabel">
          label3
        </span>
      </label>
    </div>
    <div
      className="ais-MultiRange__item">
      <label>
        <input
          checked={false}
          className="ais-MultiRange__itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="ais-MultiRange__itemBox ais-MultiRange__itemBox" />
        <span
          className="ais-MultiRange__itemLabel ais-MultiRange__itemLabel">
          label4
        </span>
      </label>
    </div>
  </div>
</div>
`;
